[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databasez"
description = "Async database support for Python."
long_description = "Async database support for Python."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Tiago Silva", email = "tiago.arasilva@gmail.com" }]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: AnyIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["nest_asyncio>=1.5.6,<2.0.0", "sqlalchemy>=2.0.12,<2.1"]
keywords = [
    "mysql",
    "postgres",
    "sqlalchemy",
    "sqlite",
    "asyncio",
    "esmerald",
    "saffier",
]

[project.urls]
Homepage = "https://github.com/tarsil/databasez"
Documentation = "https://databasez.tarsild/"
Changelog = "https://databasez.tarsild.io/release-notes/"
Funding = "https://github.com/sponsors/tarsil"
Source = "https://github.com/tarsil/databasez"

[project.optional-dependencies]
test = [
    "autoflake>=2.1.1,<3.0.0",
    "black>=23.3.0,<24.0.0",
    "esmerald>=1.1.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.1.0,<2.0.0",
    "pytest>=7.2.2,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "starlette>=0.26.1",
    "requests>=2.28.2",
    "ruff>=0.0.256,<1.0.0",
]

testing = ["sqlalchemy_utils>=0.40.0"]

dev = [
    "asyncmy>=0.2.7,<0.3.0",
    "aiopg>=1.4.0,<2.0.0",
    "aiomysql>=0.1.1,<0.2.0",
    "aiosqlite>=0.18.0,<0.20.0",
    "asyncpg>=0.27.0,<0.30.0",
    "aioodbc>=0.4.0,<0.5.0",
    "pre-commit>=2.17.0,<4.0.0",
    "psycopg2-binary>=2.9.6,<3.0.0",
    "pymysql>=1.0.3,<2.0.0",
    "pyodbc>=4.0.35,<5.0.0",
]

doc = [
    "mkautodoc>=0.2.0,<0.3.0",
    "mkdocs>=1.4.2,<2.0.0",
    "mkdocs-material==9.1.5",
    "mdx-include>=1.4.1,<2.0.0",
    "mkdocs-markdownextradata-plugin>=0.1.7,<0.3.0",
    "mkdocstrings>=0.19.0,<0.21.0",
    "pyyaml>=5.3.1,<7.0.0",
]

aiomysql = ["aiomysql"]
aioodbc = ["aioodbc"]
aiopg = ["aiopg"]
aiosqlite = ["aiosqlite"]
asyncmy = ["asyncmy"]
asyncpg = ["asyncpg"]
mysql = ["aiomysql"]
postgresql = ["asyncpg"]
sqlite = ["aiosqlite"]

[tool.hatch.version]
path = "databasez/__init__.py"

[tool.isort]
profile = "black"
known_third_party = ["esmerald", "starlette"]
src_paths = ["databasez"]

[tool.mypy]
strict = true
disallow_any_generics = false
disallow_untyped_decorators = true
implicit_reexport = true
disallow_incomplete_defs = true
disable_error_code = "attr-defined"
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
exclude = "databasez/backends"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
    "E712", # Comparison to True should be cond is True
]

[[tool.mypy.overrides]]
module = "databasez.tests.*"
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["sqlalchemy.*", "asyncpg", "alembic", "sqlalchemy_utils.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "docs_src.*"
ignore_errors = true

[tool.pytest.ini_options]
addopts = ["--strict-config", "--strict-markers"]
xfail_strict = true
junit_family = "xunit2"

[tool.hatch.build.targets.sdist]
include = ["/databasez"]
